# fuzzyLogic

./: .clang-format  .gitignore  FuzzyLogic.cpp  FuzzyLogic.hpp  LICENSE  Makefile  README.md  main.cpp
.cache/clangd/index/: FuzzyLogic.cpp.5BD19B56626B5CBE.idx  FuzzyLogic.hpp.BDF84861B9DAD106.idx  main.cpp.3C8E7521AB32CF80.idx  test.cpp.84E34967E78F7550.idx
.github/workflows/: test_linux_clang.yml  test_linux_gcc.yml  test_windows.yml
src/: CMakeLists.txt  Config.cmake.in  FuzzyLogic.cpp
src/example/: CMakeLists.txt
src/test/: CMakeLists.txt  test.cpp
